--- a/assets/css/custom-css/subscriberVerificationPage2.css
+++ b/assets/css/custom-css/subscriberVerificationPage2.css
@@ -171,6 +171,7 @@ aside {
 /* Mobile Screen Responsiveness for the Aside element */
 @media (width <= 767px) {
   aside {
+    margin: 0;
     overflow: clip;
     .fix-header {
       position: fixed;
@@ -181,6 +182,11 @@ aside {
       background-color: var(--white);
       z-index: 99;
       padding-inline: 19px;
+    }
+
+    & .main-header,
+    .sub-header {
+      margin-inline: 0.5rem;
     }
 
     & .line-through {
@@ -200,12 +206,9 @@ aside {
       align-items: center;
       gap: 1px;
       margin-block-start: 20px;
-      margin-bottom: 40px;
       overflow-x: scroll;
-      overflow-y: clip;
       scrollbar-width: none;
       -ms-overflow-style: none;
-      block-size: 80px;
 
       & ul {
         list-style-type: none;
@@ -218,7 +221,7 @@ aside {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        gap: 110px;
+        width: 150%;
         align-self: flex-start;
         padding: 0;
         list-style: none;
@@ -231,10 +234,7 @@ aside {
         & li {
           position: relative;
           border: 1px solid #d1cece;
-          border-radius: 50%;
-          width: 20px;
-          height: 20px;
-          font-size: 11px;
+          font-size: 10px;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -245,29 +245,29 @@ aside {
             position: absolute;
             top: 50%;
             left: 100%;
-            width: 400px;
+            width: 145px;
             height: 1px;
             background-color: #d1cece;
             transform: translateY(-50%);
           }
-
-          &:last-child::before {
-            content: none;
-          }
+        }
+        & li:last-child::before {
+          content: none;
         }
       }
 
       & .text-list {
-        align-self: self-start;
+        width: 170%;
+        justify-content: space-between;
         padding: 0;
-        text-align: start;
+        gap: 15px;
 
         & li {
           font-size: 11px;
-          width: 100px;
         }
 
-        & .active {
+        & .active,
+        .active-number {
           color: #000;
         }
       }
@@ -281,7 +281,6 @@ aside {
       inline-size: 20%;
     }
   }
-
   .footer {
     font-size: 14px;
     text-wrap: balance;
@@ -290,47 +289,6 @@ aside {
       gap: 5px;
       align-items: baseline;
       font-size: 14px;
-    }
-  }
-
-  /* Styling the main component */
-  .main-container-wrapper {
-    background-color: #f9fafb;
-
-    .form-title {
-      margin-block-start: 20px;
-    }
-
-    & .main-header {
-      display: flex;
-      align-items: flex-end;
-      justify-content: space-between;
-      font-size: 13px;
-      font-weight: 400;
-    }
-  }
-
-  /* Styling the form element */
-  .form-group {
-    .form-control[readonly] {
-      border: none;
-      background-color: transparent;
-      pointer-events: none;
-      box-shadow: none;
-    }
-
-    & .radio-group {
-      display: flex;
-      align-items: center;
-    }
-
-    & .radio-group div {
-      margin-right: 15px;
-
-      & label {
-        display: flex;
-        margin-top: 5px;
-      }
     }
   }
 }
@@ -363,7 +321,6 @@ aside {
 
   & .main-header {
     padding-top: 20px;
-    /* padding-inline-end: 30px; */
     display: flex;
     flex-direction: column;
     text-align: end;
@@ -528,56 +485,32 @@ aside {
 
 /* Mobile Screen Responsiveness for the Main element */
 @media (width <= 767px) {
-  .main-container-wrapper {
-    background-color: var(--white);
-    padding-inline: 10px;
-
-    & .main-container {
-      padding: 0;
-    }
+  .main-header,
+  .sub-header {
+    margin-inline: 0.5rem;
   }
-}
 
-@media (width <= 500px) {
   .main-container-wrapper {
-    margin: auto;
-    inline-size: 100%;
-    flex: 1;
     background-color: var(--white);
-    /* padding-inline-start: 5px; */
+    inline-size: 100%;
 
     & .main-container {
+      block-size: initial;
       inline-size: 100%;
     }
-
-    & .form-container {
-      inline-size: 350px;
-
-      & input {
-        inline-size: 100%;
-      }
-    }
   }
-}
 
-@media (width <= 350px) {
-  .main-container-wrapper {
-    margin: auto;
-    inline-size: 100%;
-    flex: 1;
-    background-color: var(--white);
-    padding-inline-start: 5px;
+  .form-title {
+    margin-block-start: 20px;
+  }
 
-    & .main-container {
-      inline-size: 100%;
-    }
+  .next {
+    margin-inline-end: 20px;
+    margin-block-end: 20px;
+  }
 
-    & .form-container {
-      inline-size: 300px;
-
-      & input {
-        inline-size: 100%;
-      }
-    }
+  & .form-container {
+    inline-size: 85%;
+    margin-inline: 1rem;
   }
 }
